# CollectEWaste

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cd-accounts.yml  cd-db.yml  cd-frontend.yml  cd-images.yml  cd-products.yml  ci-products.yml
account/: README.md  build.gradle
api_specification/: accounts.yaml  images.yaml  products.yaml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/api/: apiCommunication.dart  location.dart  product.dart
app/lib/custom/: myAppBar.dart  myBottomNavBar.dart  myButton.dart  myColors.dart  myFloatingActionButton.dart  (+2 more)
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
db/: Dockerfile  account_structure.sql  images_structure.sql  products_structure.sql
db/container_scripts/: 0-create-database.sh  1-use-structure-sql.sh
image/: build.gradle  settings.gradle
products/: .dockerignore  Cargo.toml  Dockerfile  README.md  dummy_data_generator.py
products/src/: item.rs  main.rs
products/src/api/: filters.rs  get.rs  mod.rs  post.rs  reserve.rs  search.rs
products/src/db/: mod.rs  pg.rs  repo.rs
products/src/db/sql/: get.sql  search_order_distance.sql  search_order_id.sql
products/src/isc/: README.md  accounts.rs
products/src/utils/: errors.rs  token.rs
web/: Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
web/src/: index.html  theme.scss
(+153 files in other folders)
