[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
jsonwebtoken = "8.1.1"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "any", "postgres"] }
hyper = { version = "0.14", features = ["full"] }
